About me - Lab 2

--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>About Me ~ Adrian Hawk</title>
+     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>About Adrian</h1>
+
+  <div class = "transblock">
 
 
+    <h1>A little about me</h1>
+<hr/ style="border-color:#5894e6; background-color:#5894e6">
 
 
+<p>
+  So, let's see. My name is Adrian Hawk. I was born and raised in Salina, Kansas. There's not much to say about Salina, that anyone describing a town in the midwest hasn't already said. In my early twenties, after bartending for a few years, I grew restless and wanted to travel a bit, then go to college. I decided to serve my country for a few years, get the GI Bill and travel the world a bit in the process. My 4 year enlistment turned into a full 20 years. I loved the tempo and the constant change. I met a lot of great people, was constantly challenged and was never bored. Needless to say, I've travelled the world many times over and now, I'm finally using my GI Bill.
+</p>
 
+<p>
+  After leaving the military in 2009, I went to work for Tri-Lakes Board of REALTORS as an IT. After a year, the 9 Multi-Listing Systems in the area combined to make a  Regional MLS and I had successfully worked myself out of a job by moving our operations from the LAN into the cloud. After my position was no longer needed, I went to work as an IT for HomeServices of America managing 5 REALTOR offices in SW Missouri, but I finally tired of IT work with that position. I spent most of my time fixing anything and everything tech related. The work no longer fed my soul. I was bored.
+</p>
 
+<p>
+  I had built a website back in the Geocity days and then another inter-lan one using Coffee Cup editor a few years later. I remembered how much I liked creating them and thought Web Development would be a perfect transition from fixing tech to creating the tech that powers it.
+</p>
+
+<p>
+  So, I sold my home in SW Missouri and moved to the NW to surround myself in the Dev world and persue the education needed for a new career. After finishing a degree in Web Dev and Design in Portland, I've moved to Seattle to get serious about coding by attending Code Fellows. After only two days, I can see it's going to be very challenging,...but very rewarding.
+</p>
+
+</div>
 
 
 
