--- a/index.html
+++ b/index.html
@@ -31,6 +31,40 @@
   So, I sold my home in SW Missouri and moved to the NW to surround myself in the Dev world and persue the education needed for a new career. After finishing a degree in Web Dev and Design in Portland, I've moved to Seattle to get serious about coding by attending Code Fellows. After only two days, I can see it's going to be very challenging,...but very rewarding.
 </p>
 
+<hr/ style="border-color:#5894e6; background-color:#5894e6">
+<h2>I suppose a couple of Top Ten lists about me are in order, so here we go.</h2>
+
+
+<h3>The following are the Top Ten foreign lands I've spent the most time in:</h3>
+<ol>
+  <li>Japan - 4 years</li>
+  <li>Afghanistan - 1 year at NATO ISAF HQ</li>
+  <li>Hong Kong - 12 visits</li>
+  <li>Singapore - 9 visits</li>
+  <li>Australia - 8 visits</li>
+  <li>Thailand - 8 visits</li>
+  <li>Seychelles - 7 visits</li>
+  <li>Dubia - 7 visits</li>
+  <li>Bahrain - 6 visits</li>
+  <li>Muscat - 4 visits</li>
+</ol>
+
+<h3>These are places people normally never guess I've been to:</h3>
+<ul>
+  <li>Russia</li>
+  <li>Malta</li>
+  <li>Gibraltar</li>
+  <li>Karachi</li>
+  <li>Germany</li>
+  <li>Kauala Lumpur</li>
+  <li>Valparaiso</li>
+  <li>Panama City</li>
+  <li>Acapulco</li>
+  <li>Puerto Vallarta</li>
+  <li>Lima</li>
+  <li>Jakarta</li>
+</ul>
+
 </div>
 
 
