--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h3>The following are the Top Ten foreign lands I've spent the most time in:</h3>
 <ol>
   <li>Japan - 4 years</li>
-  <li>Afghanistan - 1 year at NATO ISAF HQ</li>
+  <li>Afghanistan - 1 year in Kabul at NATO ISAF HQ as Sys Admin</li>
   <li>Hong Kong - 12 visits</li>
   <li>Singapore - 9 visits</li>
   <li>Australia - 8 visits</li>
